--- a/pom.xml
+++ b/pom.xml
@@ -115,6 +115,13 @@
 			<version>2.5.3</version>
 		</dependency>
 
+		<!-- Google JSON Processor -->
+    <dependency>
+      <groupId>com.googlecode.json-simple</groupId>
+      <artifactId>json-simple</artifactId>
+      <version>1.1.1</version>
+    </dependency>
+
 		<!-- Rome Atom+RSS -->
 		<dependency>
 			<groupId>com.rometools</groupId>
